[package]
name = "atmega32u4-usb"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
arduino-leonardo = { git = "https://github.com/Rahix/avr-hal" }
avr-device = "0.2.2"
panic-halt = "0.2.0"
ssd1306 = "0.4.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
