[package]
name = "atmega32u4-usb"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
arduino-leonardo = { git = "https://github.com/Rahix/avr-hal" }
atmega32u4-usb-serial = { git = "https://github.com/mogenson/atmega32u4-usb-serial" }
avr-device = "0.2.2"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"
ssd1306 = "0.4.0"
ufmt = "0.1.0"

[build-dependencies]
cc = "1.0.60"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
